@@ -19,7 +19,7 @@ func init() {
 	// Packed Files
 	// spec/filebeat.yml
 	// spec/metricbeat.yml
-	unpacked := packer.MustUnpack("eJykVltzq7oVfu/PyHOnBRF7Dp05D4ZTbnHINk4koTckOYAtGRqwMXT63zsCgy9J9u6ZPuzxjpDW9Vvft/79UJUb9vf3XGzoJqn/1krx8I8HKp2avBZpJEVFUCBivHqKgb57yS2ZoJOIJcz4osyY5N1LblE/1x0/b1J/HwruwWYpRUXXM0Glk1MX7n4gklEvFP2d+7v7SFBsVTGOxFLCQ4yCiqCVSaRTMfCWL+1FvnwbfilyDjHigiJ44PaspiASP3BaM9fZJq0uqQsFt/3Kt/06WqvfoI7RLCMA1gTNtGv73At0sg64LcMjlaQkBmz7b69FSoygiZuy5egkWFc8LddWSWUpYiN6T9BsR3A6t/NF6tuWtsGWeMmtigLe2WlR+y585F6QqbvUFR13zJK7sFZ2fHuR+p6VcTed+26UcdfpqPILYHe21999ya2S7i2de8/nN9HxchZ23AtEjPSzPz1jf9zbFgfmQY0ZocYkzCge7QQ6dWH3khap+nu5trbUsGbYiI4YnEpmrM55Df8SHAn6WqTcEw1ZFdP5OZ5LHMOb2nfDI/PEO3fNIfcxLvsmt4ZJc0tw2FEj6K79cfe3ue9dYrZzLSU405h0ttwxqwSHGgZCI0ifcmCuoyV/FGmCZg3HUceMqCXIqVlT3ORwf977GuvU9D2uY7wY+9rEOCo+9+FT/VRsBwZOGXffbmo3xvWpdqpfniXY9ro26vx0JMbzvP9tru7bi5RgIuh+dSRqHl+LlLrm/tqXb1uCSzUTZsfdqKTbPt9dgh7vfEDQz4ERbZmKzQ2bb+zoxFvMfQ/u2OI2FuV7CaJjDGqVQ0pcc5sA2N7ZqShgRybhLsHhOwOnIwenI+mKdDh7/px7a3YbHKp3CgMz9YY0xYABKSruwhYbikeguMxSKKgLt9w120+9cmuxucMul07F0U3/lL9zLNpdzbSUo6iZsO1F27EWy7W1oyD8INi/vL3JS9kSXd+nfkZJSb1IMGGCGJ10gp9HnHVE8akRHVUtRwyfv30QvJv77sRZ55zvaqDiVFy26jHcz/OYH9kHR4X9O7sa7Yq+piO3X9d4misAK4JCTc3oVb2u+H86O3IcNRyvpngSAGdM5STfnjjIhMLj2nW6tZpF/FwEuKZX/g9jfBhrpW/H0v9nljFtllEEO8XtZJ3uqQE1NatB26QBgFWMQy1BYUeQ08Yg3S/txf7cg/2yj41/xIh8xGtW+Tbv+VnxbWKz0k5///3hr4P0yU39kbMvxO8VQY1JsT2L3Zai1dx3dcG9oIzBWRRxsGddkaJ2EpyO4Ehn9qykrnYgaJbF8iTIH7qM0akj6xtxGu8qQmuo62jkV6Ip9YxKZ0+QrgjhQJG5I6/64xJbWQyqmihfePUz0bzYx1HL0VuOV+WWgplMENdZ/+1t7ru8Ze7zE9vDagCrpkD0LwUIDMSBuPBxBEU/YIqUzvU6k6nYeFEb9/eVsETvydD8e4LdxTjKGDB1JkNxT9pfAfcLov8FeYd3QmVNwj4CNgZms4GmRvVBZMbcBiJRgqPNfS+aMfftWtD6eO6F5X8VVeYFRyX8DJgta34irn9qqfhG+Kcc7heC68Xi+elrsgrfORBa4pgtQVxsvKnOA0Fd18UL1DK0WebVccJDu/opWf+/BD/N2OJbktfYHopfLkvnHlwwPxF/G6NZ188nNI0ERwU2AkEAfGS3C86Iu34pvFkG5Nvcdx6LH/rit2FeHg9P7e5zjQY7vY+XfLG7Fq/l2mpVrhTdLhojyX+zpKklWacTbrWUIueDQDNj+yDbvH65oNUER21Prnj1Ce9TzOBSsyE2/cglfFfkfzs/Q5+u311qGwiKTECg2WPpZk6Undya+OpPvDlzCtSGnquldLxnSSbN7xbsMe+cIGd4q3wNenDGHGkp0O514PAVTylu7nlm4CclnBrB/mfh319h7U5fpp6dxe9yrxYb3IuzsNPSSFx4eMktP8Zh0PNCm4qNXt/ks5T6kXgK2yF/X+/SII97UX5V+eGwiVEonmw+inkvqASdMmZEZWyEIsbBNrFZpWIIFP5d0Q1iXGdE1tnwf7XEhlqMwyJod08P//nLfwMAAP//QEreuQ==")
+	unpacked := packer.MustUnpack("eJzsV09zq7od3fdj3HWnD0RwS2fuwpCHgDjkGsdIaGdJCWBLhgnYGDr97h1hjLF9b/u67EwXGWIh/f6e3zniH9+q8oP99pmLD/qxqf/SSvHt79+odGvyXqSRFBVBgUjw8iUB+u4tt+UGnUQi44zPy4xJ3r3lNvVz3fXzJvX3oeBe3CykqOjKFFS6OYXx7gciGfVC0e+537uPBMV2leBILGR8SFBQEbS0iHQrBtb5wpnni/X5SZF7SBAXFMUH7pg1BZH4gdOaQXe7aXVJYSy441e+49fRSj2DOkFmRkBcE2RqU/vcC3SyCrgjwyOVpCRG3Pbv3ouUGEGTNGXL0UmwrnhZrOySylIkRvS5QeaO4HTm5PPUd2ztA9viLbcrCnjnpEXtw/iJe0Gm9lIoOu5aJYdxrez4zjz1PTvjMJ35MMo4dDuq/IK4G+z1e99yu6R7W+fe63AmOl7Xwo57gUiQPvjTM/Z8b1scmBdrzAg1JuOM4oudQKcw7t7SIlW/Fyt7Sw3bxEZ0xOBUMmM55HX+2+BI0Pci5Z5oyLIY14d4rnGcz9Q+DI/ME58cWufcL3E5N7k1TFpbgsOOGkE39cfh32a+d43ZybWU4Exj0t1y16o2ONQwEBpB+pgDg662eS7SDTIbjqOOGVFLkFuzprjJ4X6993WpU9P3uE7w/NLXJsFR8diHh/qp2A4MnDIO1ze1u8T1UDvVL88WbDutjVo/HYnxOuufzWS/M08JJoLul0ei5vG9SCm09lNfvmMLLtVMWB2HUUm3fb67DXq68xGDfg6MaMtUbDBsfmFHJ9585nvxjs1vY1G+FyA6JqBWOaQEWtsNiNs7OxUF7MhkvNvg8JOB05GD05F0RXpee33MvbW6DxyqcwoDpjpDmuKMASkqDuMWG4pHYnGdpVBQGG85tNqHXsFafNxhl0u34uimf8rfEIt2VzMt5ShqRmx70fZSi8XK3lEQfhHsX8/e5KVsia7vUz+jpKReJJiwQIJOOsGvF5x1RPGpER1VLS8YHt59Ebyb+XDkrCHnuxqoOBWXLXsM9/N8yY/sg6PC/p1djXZFX9MLt09rPM4ViCuCQk3N6KReE/4f144cRw3HyzGeDYhNpnKS6xcOMqHwuIJut1KziF+LANd04v9wiQ9jrfSdRPq/ZxnTzIyiuFPcTlbpnhqxpmY1aJs0AHGV4FDboLAjyG0TkO4Xznw/9GC/6GPjXwkiX8mKVb7De35WfLtxWOmk379/+/NZ+uRH/ZWzn4jfO4o1JsV2ELstRcuZD3XBvaBMwCCKONizrkhROwpOR3CkM8csKdQOBJlZIk+CPOsyQaeOrG7E6bJXEVpDoauR/ySaUs+odPcE6YoQDhRZO/KuPy2wnSWgqonyhZf/TjSv9nHUcrTO8bLcUmDKDeI669+tZz7kLYOvLwxavYDRfagl6FSdgaClFFmAxFYPhgs4rqSpfFq7Xjxbc7cwQgUGQVemSVGTj0ThReoCIfhzofI6Ei+uCH49EKcnAo0g7fCB9Goho5KBc8x++l+Jck1w1CqQ/F+Y/3eF+acCoFvGBkcFNgJBQPw01vknpM/keua7T4eX1hrxEMzvSc6/vwwobGsEB5/3ovGLM+ecQGy+5fY4YwN27ki/FxM1e31uFLnNr2o2nB8xPyH8jO7D/tKMDV5ymH0yGe8JzprrPE5w50Umg+tpz1vFcThPf1s/n/p5+ZE/fb2sHmt0tqN8pDPfifq91zwCMfDl1LZk0lJ4mu6d9HaY9eWI9TpBtcDAbZl0zZv4ocKUduVdIxR8/oD3MWYy1myI7cxTvZDezM+5T5Nzy6mQ19QgAoMeS9O8fi7If+jMmVPIILYJsJpxHyQtBdoDloZa3eiNOsv6jxhd3Is8neqV0p9HnlIfTD3P3FxKto+XqSnWbuz+QdF39rwg6Gl2FvIzL7w48V8RuMnnMOqErlsvq7kMcttPcPim8mOG0rR1EQBL556tc6cXckGh23EotgzEGZNhEbSNiuEq/s58vwGu3IDf+//VJYwZUcZAun9ZFt+//fNP/woAAP//ypoPSg==")
 	SupportedMap = make(map[string]bool)
 
 	for f, v := range unpacked {
