@@ -2,6 +2,10 @@ name: Metricbeat
 cmd: metricbeat
 args: ["-E", "setup.ilm.enabled=false", "-E", "setup.template.enabled=false", "-E", "management.mode=x-pack-fleet", "-E", "management.enabled=true"]
 configurable: grpc
+post_install:
+  - move_file:
+      path: "modules.d/system.yml"
+      target: "modules.d/system.yml.disabled"
 rules:
 - inject_index:
     type: metrics
